bugfix block list footer z-index

--- a/src/components/block-list/_block-list.scss
+++ b/src/components/block-list/_block-list.scss
@@ -38,7 +38,7 @@
   }
   .headline--disable &{display: none;}
 }
-.block-list__footer{margin-top: -$spacing; flex-direction: row-reverse;
+.block-list__footer{margin-top: -$spacing; flex-direction: row-reverse; z-index: 1;
   .footer--disable &{display: none;}
 }
 
